Fixed z-index order of elements to fix button overlay bug

--- a/static/forum.css
+++ b/static/forum.css
@@ -270,7 +270,7 @@ body {
     margin-bottom: 15px;
 }
 
-#create-a-post-popup, #comment-on-post-popup {
+#create-a-post-popup, #comment-on-post-popup, #edit-post-popup {
     display: none;
     position: fixed;
     top: 0;
@@ -278,6 +278,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
 }
 
 #comment-on-post-popup {
